RESOLVED FIXED 288582
[WPE] WPE Platform: fix nullptr deref without IME support
https://bugs.webkit.org/show_bug.cgi?id=288582
Summary [WPE] WPE Platform: fix nullptr deref without IME support
Christian Meissl
Reported 2025-02-26 00:11:25 PST
[WPE] WPE Platform: segfault on wayland without IME support
Attachments
Christian Meissl
Comment 1 2025-02-26 00:19:32 PST
EWS
Comment 2 2025-02-26 02:26:18 PST
Committed 291104@main (281f713ebdaf): <https://commits.webkit.org/291104@main> Reviewed commits have been landed. Closing PR #41386 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.