[WPE] WPE Platform: fix nullptr deref without IME support https://bugs.webkit.org/show_bug.cgi?id=288582

Reviewed by Carlos Garcia Campos.

While `wpeDisplayCreateInputMethodContext` already returns
a dummy input context with `wpeInputMethodContextNoneNew`
in case the display does not support IME at all it does not
test for nullptr of the returned context from the display.

The wayland display evaluates the presence of an IME context
at runtime depending on the actual supported wayland protocols.
In case the compositor does not announce any IME support a
nullptr will be returned, leading to a nullptr dereference later.

* Source/WebKit/WPEPlatform/wpe/WPEDisplay.cpp:
(wpeDisplayCreateInputMethodContext):

Canonical link: https://commits.webkit.org/291104@main